2011-11-29  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testWeakPointer.cpp: New file.
	* testsuite/Family.h: Likewise.
	* testsuite/Parent.h: Likewise.
	* testsuite/Parent.cpp: Likewise.
	* testsuite/Child.h: Likewise.
	* testsuite/Child.cpp: Likewise.
	* testsuite/Makefile.am: Add testWeakPointer.

2011-11-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/Engine.h: New file.
	* include/dmcs/Instantiator.h: Likewise.
	* include/dmcs/Evaluator.h: Likewise.

2011-09-27  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/process/ProcessBuf.cpp: Added safe_close() and safe_open()
	to wrap close() and open() and manage syscall interruptions.
	(This shall fix problems with too fast clasp exiting.)

2011-09-23  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
	* testsuite/Makefile.am: Add testPool.
	* testsuite/testPool.cpp: New file.

	* include/mcs/Pool.h: New file.
	(Pool): use pointer arithmetic.
	(dmcs): use void*.

	* src/mcs/Pool.cpp: Likewise.

2011-09-22  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/Makefile.am (SUBDIRS): Remove duplicate mcs.

2011-09-08  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Put path in debugging information.
	* src/network/OutputDispatcher.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/HandlerThread.h: Turn off some debugging information.
	* include/network/NeighborThread.h: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/RelSatSolverThread.cpp: Likewise.

	* include/network/AsynClient.tcc: Get out when receive no answer.

	* include/dmcs/ModelSessionId.h: Fix comparison.

	* testsuite/testDispatcher.cpp: Fix make check.
	* testsuite/testJoinLeak.cpp: Likewise.

	* testsuite/Makefile.am: Add testSATModelOrder.

	* testsuite/testSATModelOrder.cpp: New file.
	* examples/input.txt: Likewise.
	* examples/fixed_output.txt: Likewise.

2011-09-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
