@@ -3,8 +3,11 @@ AUTOMAKE_OPTIONS = gnu
 # including headers for make dist
 noinst_HEADERS =  \
 		BaseSolver.h \
+		BaseSolverState.h \
 		ChoicePoint.h \
 		Conflict.h \
+#		InputMessage.h \
+		OutputMessage.h 
 		SatSolver.h \
 		SatSolver.tcc \
 		SatSolverFactory.h \
